<resources>

    <string name="app_name">LogIt</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_log_it">LogIt</string>
    <string name="title_activity_new_exercise">Add New Exercise</string>
    <string name="hint_newEx_name">Exercise name</string>
    <string name="hint_newEx_desc">Exercise description</string>
    <string name="hint_newDt_name">Data item name</string>
    <string name="hint_newDt_desc">Data item description</string>
    <string name="button_newEx_submit">Submit</string>
    <string name="title_activity_new_metric">NewMetric</string>
    <string name="hint_newMt_name">Metric name</string>
    <string name="hint_newMt_value">Initial value</string>
    <string name="button_newMt_submit">Add Metric</string>
    <string name="button_overall_cancel">Cancel</string>
    <string name="title_activity_update_metric">UpdateMetric</string>
    <string name="button_mt_update">Update</string>
    <string name="title_activity_new_detail">New Detail</string>
    <string name="title_notes">Notes</string>

</resources>