<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical">

    <EditText
        android:id="@+id/newmetric_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_newMt_name"
    />
    
    <EditText
        android:id="@+id/newmetric_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_newMt_value"
        android:inputType="number"
    />
    
    <Button
        android:id="@+id/newmetric_button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/button_newMt_submit"
        android:onClick="onSubmitClick"
    />
    
</LinearLayout>
