<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical"
	android:minWidth="300dp"
	>

    <EditText
        android:id="@+id/textfield_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_newEx_name"
    />
    
    <EditText
        android:id="@+id/textfield_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_newEx_desc"
        android:inputType="textMultiLine|textNoSuggestions"
    />
    
    <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/button_newEx_submit"
        android:onClick="onSubmitClick"
    />

</LinearLayout>
